working on some javascript project

--- a/banking web/index.html
+++ b/banking web/index.html
@@ -43,7 +43,103 @@
 
 	<section class="container">
 		<div class="grid_container">
-			<div class="grid-item item1">Grid 1</div>
+			<div class="grid-item item1">
+				<div class="statistic_header">
+					<h2>Statistic</h2>
+					<div class="side_bar">
+						<div class="spendingDropDown">
+							<h3>Spend</h3>
+							<i class="fa-solid fa-chevron-down"></i>
+						</div>
+						<i class="fa-regular fa-calendar-days"></i>
+					</div>
+				</div>
+				<div class="graph">
+					<div class="bar_1">
+						<div class="percentage-bar">
+							<div class="filler" style="height: 30%;"></div>
+						</div>
+						<h3>Jun</h3>
+					</div>
+
+					<div class="bar_2">
+						<div class="percentage-bar">
+							<div class="filler" style="height: 50%;"></div>
+						</div>
+						<h3>Jul</h3>
+					</div>
+
+					<div class="bar_3">
+						<div class="percentage-bar">
+							<div class="filler" style="height: 20%;"></div>
+						</div>
+						<h3>Aug</h3>
+					</div>
+
+					<div class="bar_4">
+						<div class="percentage-bar">
+							<div class="filler" style="height: 60%;"></div>
+						</div>
+						<h3>Sep</h3>
+					</div>
+
+					<div class="bar_5">
+						<div class="percentage-bar">
+							<div class="filler" style="height: 70%;"></div>
+						</div>
+						<h3>Oct</h3>
+					</div>
+
+					<div class="bar_6">
+						<div class="percentage-bar">
+							<div class="filler" style="height: 40%;"></div>
+						</div>
+						<h3>Nov</h3>
+					</div>
+
+					<div class="bar_7">
+						<div class="percentage-bar">
+							<div class="filler" style="height: 30%;"></div>
+						</div>
+						<h3>Dec</h3>
+					</div>
+
+					<div class="bar_8">
+						<div class="percentage-bar">
+							<div class="filler" style="height: 25%;"></div>
+						</div>
+						<h3>Jan</h3>
+					</div>
+
+					<div class="bar_9">
+						<div class="percentage-bar">
+							<div class="filler" style="height: 30%;"></div>
+						</div>
+						<h3>Feb</h3>
+					</div>
+
+					<div class="bar_10">
+						<div class="percentage-bar">
+							<div class="filler" style="height: 50%;"></div>
+						</div>
+						<h3>Mar</h3>
+					</div>
+
+					<div class="bar_11">
+						<div class="percentage-bar">
+							<div class="filler" style="height: 70%;"></div>
+						</div>
+						<h3>Apr</h3>
+					</div>
+
+					<div class="bar_12">
+						<div class="percentage-bar">
+							<div class="filler" style="height: 30%;"></div>
+						</div>
+						<h3>May</h3>
+					</div>
+				</div>
+			</div>
         		<div class="grid-item item2">Grid 2</div>
         		<div class="grid-item item3">Grid 3</div>
         		<div class="grid-item item4">Grid 4</div>
@@ -51,5 +147,12 @@
 			
 		</div>
 	</section>
+
+	
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.9.4/Chart.js">
+	</script>
+
+	<script src="script/script.js"></script>
+
 </body>
 </html>
